--- a/src/app/admin/users/user-list/user-list.component.css
+++ b/src/app/admin/users/user-list/user-list.component.css
@@ -4,3 +4,16 @@ Date: 09-14-2023
 Description: User list component
 
 Source: Professor Krasso, Angular.io */
+
+.bg {
+  background-color: #000;
+}
+
+.add-user-card {
+  background-color: #740001;
+  color: #eeba30;
+}
+
+.btn-yellow-text {
+  color: #eeba30;
+}
