--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,11 +14,8 @@
             <img src="./assets/user-icon.png" width="200px">
           </div>
           <div class="col-md-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.</p>
+            <p><p> Today is {{ myDate | date }}, make sure to check out the <b>News</b> section and see if any <i>Tickets</i> have been added to 
+              your account since the last time you logged in.</p>
             <button type="button" class="btn btn-link">Edit Profile</button>
           </div>
 
