enable register button and add route to register page

--- a/src/app/security/signin/signin.component.html
+++ b/src/app/security/signin/signin.component.html
@@ -143,24 +143,19 @@
               >
                 Sign In
               </button>
-              <!--
-                TODO:
-                * buttons below for sprint 2, disable for now
-              -->
               <button
+                type="button"
                 class="btn btn-dark text-yellow"
-                routerLink="#"
+                routerLink="register"
                 disabled="true"
               >
                 Forgot Password?
               </button>
-              <button
+              <a
                 class="btn btn-dark text-yellow"
-                routerLink="#"
-                disabled="true"
+                routerLink="/security/register"
+                >Register</a
               >
-                Register
-              </button>
             </div>
           </form>
         </div>
