added attribution to all new files

--- a/src/app/security/reset-password/reset-password.component.html
+++ b/src/app/security/reset-password/reset-password.component.html
@@ -1,1 +1,5 @@
-<p>reset-password works!</p>
+<!-- Title: Reset Password
+Author: ngi bujri, megan walker, caitlynne johnson
+Date: 09-20-2023
+Description: reset-password
+Source: Professor Krasso, Angular.io  -->
