--- a/src/app/security/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/security/verify-security-questions/verify-security-questions.component.html
@@ -1,1 +1,5 @@
-<p>verify-security-questions works!</p>
+<!-- Title: verify-security-questions.component
+Author: Megan Walker,  Ngi Bujri, Caitlynne Johnson
+Date: 09-20-2023
+Description: verify-security-questions
+Source: Professor Krasso, Angular.io -->
