--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -29,7 +29,7 @@ Date: 9/13/23
         <a routerLink="#" class="nav-link">Service Repairs</a>
       </li>
       <li class="nav-item">
-        <a routerLink="#" class="nav-link">Employees</a>
+        <a routerLink="/employee-directory" class="nav-link">Employees</a>
       </li>
       <li class="nav-item">
         <a routerLink="#" class="nav-link">FAQ</a>
