--- a/src/app/security/reset-password/reset-password.component.html
+++ b/src/app/security/reset-password/reset-password.component.html
@@ -4,55 +4,54 @@ Date: 09-20-2023
 Description: reset-password
 Source: Professor Krasso, Angular.io  -->
 
-<div class="container mt-5">
+<div class="contianer mt-5">
   <div class="row justify-content-center mt-5">
     <div class="col-lg-8 col-md-10">
-      <div class="card shadow p-4">
+      <div class="card-shadow p-4 ">
+
         <form [formGroup]="changePasswordForm" (ngSubmit)="changePassword()" class="form row g-3">
 
           <div *ngIf="errorMessage" class="row">
             <div class="col-12">
               <div class="alert alert-danger">
-                {{errorMessage }}
+                {{ errorMessage }}
               </div>
             </div>
           </div>
 
           <fieldset class="mb-3 form-group">
-            <legend>Change Password</legend>
+            <legend class="">Enter Your New Password</legend>
 
-            <div class=" row">
+            <div class="row">
               <div class="col-md-12">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" formControlName="password" class="form-control">
+                <input type="password" formControlName="password" class="form-control ">
 
-                <!--validation errors -->
-                <div class="alert alert-danger mt-2" *ngIf="changePasswordForm.controls['password'].invalid &§(changePasswordForm.controls['password'].dirty || changePasswordForm.controls['password'].
-                touched)">
-                  <div *ngif="changePasswordForm.controls['password'].errors.required">
-                    Password is required.
-                  </div>
+                <!--validation errors-->
+                <div class="alert alert-danger mt-2"
+                  *ngIf="changePasswordForm.controls['password'].invalid && (changePasswordForm.controls['password'].dirty || changePasswordForm.controls['password'].touched)">
+                  Password is required.
+                </div>
 
-                  <div *ngif="changePasswordForm.controls['password'].hasError('pattern')">
-                    Password must be at least 8 characters long, contain at least one uppercase letter, one lowercase
-                    letter, and one number.
-                  </div>
+                <div *ngIf="changePasswordForm.controls['password'].hasError('pattern')" class="">
+                  Password must be at least 8 characters long, contain at least one uppercase letter, one lowercase
+                  letter, and one number.
                 </div>
               </div>
             </div>
           </fieldset>
-          I
-          <button type="submit" id="submit" [disabled]="!changePasswordForm.valid" value="Change Password"
-            class="btn btn-lg bg-dark text-white mx-auto d-block">
-            <span *ngif="!isLoading">Change Password</span>
-
-            <div *ngIf="isLoading">
-              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...
-              <div>
-          </button>
+          <div class="col-md-6">
+            <button type="submit" id="submit" [disabled]="!changePasswordForm.valid" value="Change Password"
+              class="btn  ">
+              <span *ngIf="!isLoading">Change Password</span>
+              <div *ngIf="isLoading">
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...
+              </div>
+            </button>
+          </div>
         </form>
-      </div>
-      <a class="text-underline-hover text-dark" routerLink="/security/forgot-password">Return</a>
+      </div><br>
+      <a routerLink="/" class="text-underline-hover"><button mat-raised button class="btn">Go
+          Back</button></a>
     </div>
   </div>
 </div>
