--- a/src/app/security/verify-email/verify-email.component.html
+++ b/src/app/security/verify-email/verify-email.component.html
@@ -3,3 +3,53 @@ Author: Megan Walker  Ngi Bujri, Caitlynne Johnson
 Date: 09-20-2023
 Description: verify-email
 Source: Professor Krasso, Angular.io -->
+
+<div class="container mt-5">
+  <div class="row justify-content-center mt-5">
+    <div class="col-lg-8 col-md-10">
+      <div class="card shadow p-4">
+        <form [formGroup]="emailForm" (ngSubmit)="verifyEmail()" class="form row g-3">
+          <!--Error Message-->
+          <div *ngIf="errorMessage" class="row">
+            <div class="col-12">
+              <div class="alert alert-danger">
+                {{ errorMessage }}
+              </div>
+            </div>
+          </div>
+
+          <fieldset class="mb-3 form-group">
+            <legend> Enter the email address associated with your account</legend>
+
+            <div class="row">
+              <div class="col-md-12">
+                <input class="form-control " formControlName="email" type="text" id="email" name="email"
+                  required>
+
+                <!--validation errors-->
+                <div class="alert alert-danger mt-2"
+                  *ngIf="emailForm.controls['email'].invalid && (emailForm.controls['email'].dirty || emailForm.controls['email'].touched)">
+                  Email is required.
+                </div>
+
+                <div *ngIf="emailForm.controls['email'].hasError('email')">
+                  Email must be a valid email address.
+                </div>
+              </div>
+            </div>
+          </fieldset>
+
+          <button type="submit" id="submit" [disabled]="!emailForm.valid"
+            class="btn btn-lg">
+            <span *ngIf="!isLoading">Verify Account</span>
+            <div *ngIf="isLoading">
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...
+            </div>
+          </button>
+        </form>
+      </div><br>
+      <a routerLink="/" class="text-dark text-underline-hover"><button mat-raised button
+          class="btn">Go Back</button></a>
+    </div>
+  </div>
+</div>
