complete register page

--- a/src/app/security/signin/signin.component.html
+++ b/src/app/security/signin/signin.component.html
@@ -105,7 +105,7 @@
             <div
               *ngIf="
                 signinForm.controls['password'].touched &&
-                signinForm.controls['password'].hasError('password')
+                signinForm.controls['password'].hasError('pattern')
               "
             >
               <div
