--- a/src/app/security/register/register.component.html
+++ b/src/app/security/register/register.component.html
@@ -1,1 +1,380 @@
-<p>register works!</p>
+<!--
+  title: register.component.html
+  author: ngi bujri
+  date: september 19 2023
+  description: user registration page
+-->
+
+<!-- container -->
+<div class="container-fluid black-bg pt-3 pb-3">
+  <!-- form card -->
+  <div class="card p-5 w-75 m-auto red-bg text-yellow">
+    <h1 class="text-center">User Registration</h1>
+
+    <!-- register form -->
+    <div class="card-body mt-5 w-75 m-auto">
+      <form [formGroup]="registerForm" (ngSubmit)="register()">
+        <!-- error message display -->
+        <div *ngIf="errorMessage" class="row">
+          <div class="col-12">
+            <div class="alert alert-danger">
+              {{ errorMessage }}
+            </div>
+          </div>
+        </div>
+
+        <fieldset class="m-auto">
+          <!-- credentials -->
+          <h3>Account Credentials</h3>
+
+          <!-- email error handling -->
+          <div
+            *ngIf="
+              registerForm.controls['email'].touched &&
+              registerForm.controls['email'].hasError('required')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              Email is required.
+            </div>
+          </div>
+          <div
+            *ngIf="
+              registerForm.controls['email'].touched &&
+              registerForm.controls['email'].hasError('email')
+            "
+          >
+            <div class="alert alert-danger" role="alert">Email is invalid.</div>
+          </div>
+          <!-- end email error handling -->
+
+          <!-- email input -->
+          <div class="mb-3">
+            <label for="email" class="form-label">Email:</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              formControlName="email"
+            />
+          </div>
+          <!-- end email input -->
+
+          <!-- password error handling -->
+          <div
+            *ngIf="
+              registerForm.controls['password'].touched &&
+              registerForm.controls['password'].hasError('required')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              Password is required.
+            </div>
+          </div>
+          <div
+            *ngIf="
+              registerForm.controls['password'].touched &&
+              registerForm.controls['password'].hasError('pattern')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              Password must be at least 8 characters long and contain one
+              uppercase and lowercase letter, and one number
+            </div>
+          </div>
+          <!-- end password error handling -->
+
+          <!-- password input -->
+          <div class="mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              formControlName="password"
+            />
+          </div>
+          <!-- end password input -->
+
+          <!-- personal info -->
+          <h3>Personal Information</h3>
+          <!-- first name error handling -->
+          <div
+            *ngIf="
+              registerForm.controls['firstName'].touched &&
+              registerForm.controls['firstName'].hasError('required')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              First name is required.
+            </div>
+          </div>
+          <!-- end first name error handling -->
+
+          <!-- first name input -->
+          <div class="mb-3">
+            <label for="firstName" class="form-label">First Name:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              formControlName="firstName"
+            />
+          </div>
+          <!-- end first name input -->
+
+          <!-- last name error handling -->
+          <div
+            *ngIf="
+              registerForm.controls['lastName'].touched &&
+              registerForm.controls['lastName'].hasError('required')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              Last name is required.
+            </div>
+          </div>
+          <!-- end last name error handling -->
+
+          <!-- last name input -->
+          <div class="mb-3">
+            <label for="lastName" class="form-label">Last Name:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastName"
+              formControlName="lastName"
+            />
+          </div>
+          <!-- end last name input -->
+
+          <!-- phone error handling-->
+          <div
+            *ngIf="
+              registerForm.controls['phoneNumber'].touched &&
+              registerForm.controls['phoneNumber'].hasError('required')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              Phone number is required.
+            </div>
+          </div>
+          <!-- end phone error handling -->
+
+          <!-- phone input -->
+          <div class="mb-3">
+            <label for="phoneNumber" class="form-label">Phone:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="phoneNumber"
+              formControlName="phoneNumber"
+            />
+          </div>
+          <!-- end phone input -->
+
+          <!-- address error handling -->
+          <div
+            *ngIf="
+              registerForm.controls['address'].touched &&
+              registerForm.controls['address'].hasError('required')
+            "
+          >
+            <div class="alert alert-danger" role="alert">
+              Address is required.
+            </div>
+          </div>
+          <!-- end address error handling -->
+
+          <!-- address input -->
+          <div class="mb-3">
+            <label for="address" class="form-label">Address:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="address"
+              formControlName="address"
+            />
+          </div>
+          <!-- end address input -->
+
+          <!-- security questions -->
+          <h3>Security Questions</h3>
+
+          <!-- q1 -->
+          <div class="mb-3 row">
+            <!-- q1 error handling -->
+            <div
+              *ngIf="
+                registerForm.controls['question1'].touched &&
+                registerForm.controls['question1'].hasError('required')
+              "
+            >
+              <div class="alert alert-danger" role="alert">
+                Please choose your first question.
+              </div>
+            </div>
+            <!-- end q1 error handling -->
+
+            <!-- answer1 error handling -->
+            <div
+              *ngIf="
+                registerForm.controls['answer1'].touched &&
+                registerForm.controls['answer1'].hasError('required')
+              "
+            >
+              <div class="alert alert-danger" role="alert">
+                Please answer your first question.
+              </div>
+            </div>
+            <!-- end answer1 error handling -->
+
+            <div class="col-8">
+              <label for="q1" class="form-label">Question 1:</label>
+              <select
+                name="securityQuestion"
+                id="q1"
+                class="form-select"
+                formControlName="question1"
+              >
+                <option *ngFor="let q of questionsArray1" [value]="q">
+                  {{ q }}
+                </option>
+              </select>
+            </div>
+            <div class="col-4">
+              <label for="answer-1" class="form-label">Answer:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="answer-1"
+                formControlName="answer1"
+              />
+            </div>
+          </div>
+          <!-- end q1 -->
+
+          <!-- q2 -->
+          <div class="mb-3 row">
+            <!-- q2 error handling -->
+            <div
+              *ngIf="
+                registerForm.controls['question2'].touched &&
+                registerForm.controls['question2'].hasError('required')
+              "
+            >
+              <div class="alert alert-danger" role="alert">
+                Please choose your second question.
+              </div>
+            </div>
+            <!-- end q2 error handling -->
+
+            <!-- answer2 error handling -->
+            <div
+              *ngIf="
+                registerForm.controls['answer2'].touched &&
+                registerForm.controls['answer2'].hasError('required')
+              "
+            >
+              <div class="alert alert-danger" role="alert">
+                Please answer your second question.
+              </div>
+            </div>
+            <!-- end answer2 error handling -->
+            <div class="col-8">
+              <label for="q2" class="form-label">Question 2:</label>
+              <select
+                name="securityQuestion"
+                id="q2"
+                class="form-select"
+                formControlName="question2"
+              >
+                <option *ngFor="let q of questionsArray2" [value]="q">
+                  {{ q }}
+                </option>
+              </select>
+            </div>
+            <div class="col-4">
+              <label for="answer-2" class="form-label">Answer:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="answer-2"
+                formControlName="answer2"
+              />
+            </div>
+          </div>
+          <!-- end q2 -->
+
+          <!-- q3 -->
+          <div class="mb-3 row">
+            <!-- q3 error handling -->
+            <div
+              *ngIf="
+                registerForm.controls['question3'].touched &&
+                registerForm.controls['question3'].hasError('required')
+              "
+            >
+              <div class="alert alert-danger" role="alert">
+                Please choose your third question.
+              </div>
+            </div>
+            <!-- end q3 error handling -->
+
+            <!-- answer3 error handling -->
+            <div
+              *ngIf="
+                registerForm.controls['answer3'].touched &&
+                registerForm.controls['answer3'].hasError('required')
+              "
+            >
+              <div class="alert alert-danger" role="alert">
+                Please answer your third question.
+              </div>
+            </div>
+            <!-- end answer3 error handling -->
+
+            <div class="col-8">
+              <label for="q3" class="form-label">Question 3:</label>
+              <select
+                name="securityQuestion"
+                id="q3"
+                class="form-select"
+                formControlName="question3"
+              >
+                <option *ngFor="let q of questionsArray3" [value]="q" selected>
+                  {{ q }}
+                </option>
+              </select>
+            </div>
+            <div class="col-4">
+              <label for="answer-3" class="form-label">Answer:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="answer-3"
+                formControlName="answer3"
+              />
+            </div>
+          </div>
+          <!-- end q3 -->
+
+          <!-- buttons -->
+          <div class="row gx-3 mt-5 justify-content-around">
+            <div class="col-5">
+              <button class="btn btn-dark w-100 text-yellow">Register</button>
+            </div>
+            <div class="col-5">
+              <button
+                class="btn btn-dark w-100 text-yellow"
+                routerLink="/security/signin"
+              >
+                Cancel
+              </button>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+</div>
