--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-6">
-            <img src="./assets/user-icon.png" width="200px">
+            <img src="./assets/404 Error.png" width="200px">
           </div>
           <div class="col-md-6">
             <p><p> Today is {{ myDate | date }}, make sure to check out the <b>News</b> section and see if any <i>Tickets</i> have been added to 
