--- a/src/app/security/reset-password/reset-password.component.html
+++ b/src/app/security/reset-password/reset-password.component.html
@@ -7,7 +7,7 @@ Source: Professor Krasso, Angular.io  -->
 <div class="contianer mt-5">
   <div class="row justify-content-center mt-5">
     <div class="col-lg-8 col-md-10">
-      <div class="card-shadow p-4 ">
+      <div class="card-shadow p-4 red-bg text-yellow">
 
         <form [formGroup]="changePasswordForm" (ngSubmit)="changePassword()" class="form row g-3">
 
@@ -41,7 +41,7 @@ Source: Professor Krasso, Angular.io  -->
           </fieldset>
           <div class="col-md-6">
             <button type="submit" id="submit" [disabled]="!changePasswordForm.valid" value="Change Password"
-              class="btn  ">
+              class="btn btn-dark w-100 text-yellow ">
               <span *ngIf="!isLoading">Change Password</span>
               <div *ngIf="isLoading">
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...
