--- a/src/app/security/verify-email/verify-email.component.html
+++ b/src/app/security/verify-email/verify-email.component.html
@@ -7,7 +7,7 @@ Source: Professor Krasso, Angular.io -->
 <div class="container mt-5">
   <div class="row justify-content-center mt-5">
     <div class="col-lg-8 col-md-10">
-      <div class="card shadow p-4">
+      <div class="card shadow p-4 red-bg text-yellow">
         <form [formGroup]="emailForm" (ngSubmit)="verifyEmail()" class="form row g-3">
           <!--Error Message-->
           <div *ngIf="errorMessage" class="row">
@@ -40,7 +40,7 @@ Source: Professor Krasso, Angular.io -->
           </fieldset>
 
           <button type="submit" id="submit" [disabled]="!emailForm.valid"
-            class="btn btn-lg">
+            class="btn btn-lg btn-dark w-100 text-yellow">
             <span *ngIf="!isLoading">Verify Account</span>
             <div *ngIf="isLoading">
               <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...
