--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
             <img src="./assets/404 Error.png" width="200px">
           </div>
           <div class="col-md-6">
-            <p><p> Today is {{ myDate | date }}, make sure to check out the <b>News</b> section and see if any <i>Tickets</i> have been added to 
+            <p><p> Today is {{ myDate | date }}, make sure to check out the <b>News</b> section for any updates and see if any <i>Tickets</i> have been added to 
               your account since the last time you logged in.</p>
             <button type="button" class="btn btn-link">Edit Profile</button>
           </div>
