--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -5,7 +5,18 @@
     ** source: https://v5.material.angular.io/components/expansion/overview
 -->
 
-<h1>Frequently Asked Questions</h1>
+<header class="container-fluid">
+  <div class="container-p-5">
+      <hr class="my-5" />
+      <div class="row">
+          <div class="col-md-12">
+              <!-- description of the team -->
+              <h2 class="display-3 text-center">Frequently Asked Questions</h2>
+              <div class="p lead text-center">
+                  Need an answer to something? Find it here!
+              </div>
+          </div>
+      </div>
 
 <div class="container p-5">
     <mat-expansion-panel (opened)="panelOpenState = true"
@@ -64,9 +75,10 @@ click the pen that is also under the 'Actions' tab.
     </mat-expansion-panel-header>
     <p><a href="./assets/acc1.png">Step 1:</a> At the sign-in page, there will be a button labeled
       'Forgot Password', click on it and it will redirect you to the 'Forgot Password' page. <br>
-      <a href="./assets/acc1.png">Step 2:</a>  <br>
-      <a href="./assets/acc1.png">Step 3:</a> <br>
-      <a href="./assets/acc1.png">Step 4:</a> <br>
+      <a href="./assets/pass2.png">Step 2:</a> Once you are redirected, enter your email address. Once your email address is entered, hit submit. <br>
+      <a href="./assets/pass3.png">Step 3:</a> You will then be redirected to the security questions you answered when you registered for an account. Enter those answers
+      and hit verify. <br>
+      <a href="./assets/pass4.png">Step 4:</a> Once the security questions are verified, you will be prompted to change your password. <br>
     </p>
   </mat-expansion-panel>
 </div>
