--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -32,7 +32,7 @@ Date: 9/13/23
         <a routerLink="/employee-directory" class="nav-link">Employees</a>
       </li>
       <li class="nav-item">
-        <a routerLink="#" class="nav-link">FAQ</a>
+        <a routerLink="/faq" class="nav-link">FAQ</a>
       </li>
       <ng-container *ngIf="sessionUser.role === 'admin'">
         <li class="nav-item">
