--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,21 +4,26 @@
 
 <!-- User's profile -->
 <div class="container py-4">
-
   <div class="p-5 mb-4 bg-light">
     <div class="container-fluid py-5">
       <h1 class="display-5 fw-bold m-5">Welcome, User!</h1>
       <div class="container">
         <div class="row text-center">
           <div class="col-md-6">
-            <img src="./assets/404 Error.png" width="200px">
+            <img src="./assets/404 Error.png" width="200px" />
           </div>
           <div class="col-md-6">
-            <p><p> Today is {{ myDate | date }}, make sure to check out the <b>News</b> section for any updates and see if any <i>Tickets</i> have been added to 
-              your account since the last time you logged in.</p>
-            <button type="button" class="btn btn-link">Edit Profile</button>
+            <p></p>
+            <p>
+              Today is {{ myDate | date }}, make sure to check out the
+              <b>News</b> section for any updates and see if any
+              <i>Tickets</i> have been added to your account since the last time
+              you logged in.
+            </p>
+            <button type="button" class="btn btn-link" routerLink="/my-profile">
+              Edit Profile
+            </button>
           </div>
-
         </div>
       </div>
     </div>
@@ -31,8 +36,7 @@
         <h1 class="display-5 fw-bold text-warning text-center">News</h1>
         <div class="overflow-hidden">
           <!--Table-->
-          <table class="table-responsive">
-          </table>
+          <table class="table-responsive"></table>
           <table class="table table-hover table-forum text-center">
             <!--Table head-->
             <thead>
@@ -46,9 +50,7 @@
             <!--Table body-->
             <tbody>
               <tr>
-                <td scope="row" class="text-nowrap">
-
-                </td>
+                <td scope="row" class="text-nowrap"></td>
                 <td class="text-start">
                   <a href="#" class="font-weight-bold blue-text">
                     Welcome our newest employee - Parvati Patil!
@@ -57,7 +59,8 @@
                     <a href="#" class="blue-text">
                       <strong>Wolfgang Mozart</strong>
                     </a>
-                    <span class="badge bg-danger mx-1">Staff</span><span class="badge bg-warning mx-1">Important</span>
+                    <span class="badge bg-danger mx-1">Staff</span
+                    ><span class="badge bg-warning mx-1">Important</span>
                     <span>1 day ago</span>
                     <div></div>
                   </div>
@@ -70,16 +73,17 @@
                 </td>
               </tr>
               <tr>
-                <td scope="row" class="text-nowrap">
-                </td>
+                <td scope="row" class="text-nowrap"></td>
                 <td class="text-start">
                   <a href="#" class="font-weight-bold blue-text">
-                    End of the Summer Bash Party Information </a>
+                    End of the Summer Bash Party Information
+                  </a>
                   <div class="my-2">
                     <a href="#" class="blue-text">
                       <strong>Wolfgang Mozart</strong>
                     </a>
-                    <span class="badge bg-danger mx-1">Staff</span><span class="badge bg-warning mx-1">Important</span>
+                    <span class="badge bg-danger mx-1">Staff</span
+                    ><span class="badge bg-warning mx-1">Important</span>
                     <span>2 days ago</span>
                   </div>
                   <div></div>
@@ -92,8 +96,7 @@
                 </td>
               </tr>
               <tr>
-                <td scope="row" class="text-nowrap">
-                </td>
+                <td scope="row" class="text-nowrap"></td>
                 <td class="text-start">
                   <a href="#" class="font-weight-bold blue-text">
                     10 easy ways to improve your productivity!
@@ -102,7 +105,8 @@
                     <a href="#" class="blue-text">
                       <strong>Heromine Granger</strong>
                     </a>
-                    <span class="badge bg-danger mx-1">Staff</span><span class="badge bg-warning mx-1">Important</span>
+                    <span class="badge bg-danger mx-1">Staff</span
+                    ><span class="badge bg-warning mx-1">Important</span>
                     <span>6 days ago</span>
                     <div></div>
                   </div>
@@ -112,9 +116,6 @@
                     <span>11</span>
                     <i class="fas fa-comments ml-1"></i>
                   </a>
-
-
-
                 </td>
               </tr>
             </tbody>
@@ -122,7 +123,6 @@
           </table>
 
           <!-- end of news -->
-
         </div>
       </div>
     </div>
@@ -136,3 +136,4 @@
     </div>
   </div>
   <!-- end of tickets -->
+</div>
