--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
   <div class="row align-items-md-stretch">
     <div class="col-md-6">
       <div class="h-100 p-5 text-white bg-light">
-        <h1 class="display-5 fw-bold text-warning text-center">News</h1>
+        <h1 class="display-5 fw-bold text-yellow text-center">News</h1>
         <div class="overflow-hidden">
           <!--Table-->
           <table class="table-responsive">
@@ -57,7 +57,7 @@
                     <a href="#" class="blue-text">
                       <strong>Wolfgang Mozart</strong>
                     </a>
-                    <span class="badge bg-danger mx-1">Staff</span><span class="badge bg-warning mx-1">Important</span>
+                    <span class="badge dark-bg mx-1">Staff</span><span class="badge yellow-bg mx-1">Important</span>
                     <span>1 day ago</span>
                     <div></div>
                   </div>
@@ -79,7 +79,7 @@
                     <a href="#" class="blue-text">
                       <strong>Wolfgang Mozart</strong>
                     </a>
-                    <span class="badge bg-danger mx-1">Staff</span><span class="badge bg-warning mx-1">Important</span>
+                    <span class="badge dark-bg mx-1">Staff</span><span class="badge yellow-bg mx-1">Important</span>
                     <span>2 days ago</span>
                   </div>
                   <div></div>
@@ -102,7 +102,7 @@
                     <a href="#" class="blue-text">
                       <strong>Heromine Granger</strong>
                     </a>
-                    <span class="badge bg-danger mx-1">Staff</span><span class="badge bg-warning mx-1">Important</span>
+                    <span class="badge dark-bg mx-1">Staff</span><span class="badge yellow-bg mx-1">Important</span>
                     <span>6 days ago</span>
                     <div></div>
                   </div>
@@ -130,7 +130,7 @@
     <!-- start of tickets -->
     <div class="col-md-6">
       <div class="h-100 p-5 bg-light border">
-        <h1 class="display-5 fw-bold text-warning text-center">Tickets</h1>
+        <h1 class="display-5 fw-bold text-yellow text-center">Tickets</h1>
         There are currently no tickets.
       </div>
     </div>
