--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -3,8 +3,8 @@ Modified by: Caitlynne Johnson
 Date: 9/13/23
 -->
 
-<nav class="ps-3 navbar navbar-expand-sm navbar-danger bg-danger fixed-top">
-  <a routeLink="/" class="navbar-brand">Bob's Computer Repair Services</a>
+<nav class="dark-bg ps-3 navbar navbar-expand-sm fixed-top">
+  <a routeLink="/" class="navbar-brand text-yellow">Bob's Computer Repair Services</a>
 
   <button
     class="navbar-toggler"
@@ -23,23 +23,23 @@ Date: 9/13/23
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a routerLink="/home" class="nav-link">Home</a>
+        <a routerLink="/home" class="nav-link text-yellow">Home</a>
       </li>
       <li class="nav-item">
-        <a routerLink="#" class="nav-link">Service Repairs</a>
+        <a routerLink="#" class="nav-link text-yellow">Service Repairs</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/employee-directory" class="nav-link">Employees</a>
+        <a routerLink="/employee-directory" class="nav-link text-yellow">Employees</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/faq" class="nav-link">FAQ</a>
+        <a routerLink="/faq" class="nav-link text-yellow">FAQ</a>
       </li>
       <ng-container *ngIf="sessionUser.role === 'admin'">
         <li class="nav-item">
-          <a routerLink="/admin/users" class="nav-link">User Config</a>
+          <a routerLink="/admin/users" class="nav-link text-yellow">User Config</a>
         </li>
         <li class="nav-item">
-          <a routerLink="#" class="nav-link">Service Graphs</a>
+          <a routerLink="/purchases-by-service" class="nav-link text-yellow">Service Graphs</a>
         </li>
       </ng-container>
 
