add padding so nav doesn't cover main

--- a/src/app/layouts/base-layout/base-layout.component.html
+++ b/src/app/layouts/base-layout/base-layout.component.html
@@ -4,11 +4,13 @@ Date: 09-14-2023
 Description: Base layout component
 Source: Professor Krasso, Angular.io -->
 
-<app-nav></app-nav> <!-- website navbar -->
+<app-nav></app-nav>
+<!-- website navbar -->
 
-<main>
+<main class="pt-5">
   <!-- The router outlet is where the different child components of the BaseLayout are rendered.  -->
   <router-outlet></router-outlet>
 </main>
 
-<app-footer></app-footer> <!-- website footer -->
+<app-footer></app-footer>
+<!-- website footer -->
