--- a/src/app/invoice-summary/invoice-summary.component.html
+++ b/src/app/invoice-summary/invoice-summary.component.html
@@ -13,8 +13,8 @@ Source: Professor Krasso, Angular.io -->
             <span class="material-icons text-secondary">print</span>
           </button>
           <header class="text-center">
-            <h2>Bob's Computer Repair Shop</h2>
-            <h3>Service Repair Invoice</h3>
+            <h2>Bob's Computer Repair Shop</h2><br>
+            <h3>Service Repair Invoice</h3><br>
           </header>
 
           <section>
@@ -36,7 +36,7 @@ Source: Professor Krasso, Angular.io -->
                 </table>
               </div>
             </div>
-          </section>
+          </section><br>
 
           <section>
             <div class="row">
@@ -54,11 +54,11 @@ Source: Professor Krasso, Angular.io -->
                 <p>Other Labor Cost: {{ invoice.laborAmount | currency }}</p>
               </div>
             </div>
-          </section>
+          </section><br>
 
           <section>
             <div class="row">
-              <div class="col-lg-8">
+              <div class="col-lg-12">
                 <table class="table invoice-table">
                   <tr>
                     <td>
