--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
               class="btn btn-link"
               routerLink="/{{ cookie.email }}/my-profile"
             >
-              Edit Profile
+              View Profile
             </button>
           </div>
         </div>
