--- a/src/styles.css
+++ b/src/styles.css
@@ -27,9 +27,16 @@ Source: Professor Krasso, Angular.io */
   background: var(--hp-yellow) !important;
   color: var(--hp-black) !important;
 }
+ul {
+  list-style-type: none;
+  padding-left: 0 !important;
+}
 th {
   background: var(--hp-yellow) !important;
   color: var(--hp-black) !important;
+}
+.col-6 {
+  padding-left: 3em !important
 }
 
 html, body { height: 100%; }
