added title to service repair page

--- a/src/app/invoice-list/invoice-list.component.html
+++ b/src/app/invoice-list/invoice-list.component.html
@@ -6,6 +6,8 @@ Source: Professor Krasso, Angular.io -->
 
 <div class="container-fluid pt-2" style="min-height: 600px; margin-top: 10%;">
   <div class="row justify-content-center pt-4">
+    <h1 class="text-center">Service Repairs</h1><br><br>
+
     <div class="col-12">
       <a routerLink="/service-repair" class="text-dark text-underline-hover">
         <button class="btn btn-new-invoice">Add A New Invoice</button>
